Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-68259

Windows: When running qdoc then the command line can be too long due to the number of arguments passed

    XMLWordPrintable

Details

    • c825330078a994f4ecd76569b80f47538f674610, 23841083e33c85baed3441c7cc80dafcf5bea0d9

    Description

      Windows: When running qdoc then the command line can be too long due to the number of arguments passed. Therefore the arguments should be passed via a file that contains them in order to avoid long command line arguments in this case (similar to how moc deals with this).

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            paulwicking Paul Wicking
            andysh Andy Shaw
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes